--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 		
+		<!-- Hibernate validator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+				
+		<!-- Spring Web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
